Added rainbow mode

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
-        <button id = "clrBtn" onclick = "clearGrid()">Clear the grid</button>
+        <button id = "clrBtn" onclick = "clearGrid()">New Grid</button>
+        <button id = "rnbwBtn" onclick = "rainbow()">Rainbow Colors</button>
         <div id = "container"></div>
     </body>
 
